# pyopendrive

./: MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt  te.py  tutorial.py  tutorial_create_xodr.py  tutorial_xdor_to_sumo_vice_verse.py
.edge-dom-profile/: Local State  MamLog.txt
.edge-dom-profile/Default/: History  Preferences  Secure Preferences  SiteList.xml  Web Data  load_statistics.db
.edge-dom-profile/Default/Cache/Cache_Data/: data_0  data_1  f_000003  f_000006  f_000007  f_00000a  index
.edge-dom-profile/Default/Code Cache/js/: 127b083dc4490a23_0  13a6295d37fd14f6_0  2a8a6f695a3ff316_0  2cca9bc741a6516d_0  5cce1706364839f1_0  5fbb54f36261c413_0  7de0dc67a2b3a69c_0  8020acacb3d13763_0  8bb1867be67136eb_0  945cb8fb56d09a8e_0  b21fb45197b9c728_0  ba678a2fbd8c358c_0  baded5730168391f_0  e94999eac39dfd99_0  e9a142a21b9ad9ef_0  ebce9e52a869b921_0
.edge-dom-profile/Default/Code Cache/js/index-dir/: the-real-index
.edge-dom-profile/Default/Code Cache/wasm/index-dir/: the-real-index
.edge-dom-profile/Default/DawnGraphiteCache/: index
.edge-dom-profile/Default/DawnWebGPUCache/: index
.edge-dom-profile/Default/DualEngine/: SiteList-Enterprise.json
.edge-dom-profile/Default/EdgeCoupons/coupons_data.db/: LOG
.edge-dom-profile/Default/Extension Rules/: LOG
.edge-dom-profile/Default/Extension Scripts/: LOG
.edge-dom-profile/Default/Extension State/: LOG
.edge-dom-profile/Default/GPUCache/: index
.edge-dom-profile/Default/Local Extension Settings/jdiccldimpdaibmpdkjnbmckianbfold/: LOG
.edge-dom-profile/Default/Local Storage/leveldb/: LOG
.edge-dom-profile/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
.edge-dom-profile/Default/Session Storage/: LOG
.edge-dom-profile/Default/Sessions/: Session_13422044325471748  Tabs_13422044325591618
.edge-dom-profile/Default/Shared Dictionary/cache/index-dir/: the-real-index
.edge-dom-profile/Default/Site Characteristics Database/: LOG
.edge-dom-profile/Default/Storage/ext/ihmafllikibpmigkcoadcmckbfhibefp/def/Code Cache/js/: 6f3a0dc5e6916f1e_0
.edge-dom-profile/Default/Storage/ext/ihmafllikibpmigkcoadcmckbfhibefp/def/Code Cache/js/index-dir/: the-real-index
.edge-dom-profile/Default/Storage/ext/ihmafllikibpmigkcoadcmckbfhibefp/def/Code Cache/wasm/index-dir/: the-real-index
.edge-dom-profile/Default/Storage/ext/ihmafllikibpmigkcoadcmckbfhibefp/def/DawnGraphiteCache/: index
.edge-dom-profile/Default/Storage/ext/ihmafllikibpmigkcoadcmckbfhibefp/def/DawnWebGPUCache/: index
.edge-dom-profile/Default/Storage/ext/ihmafllikibpmigkcoadcmckbfhibefp/def/GPUCache/: index
.edge-dom-profile/Default/Storage/ext/ihmafllikibpmigkcoadcmckbfhibefp/def/Local Storage/leveldb/: LOG
.edge-dom-profile/Default/Storage/ext/ihmafllikibpmigkcoadcmckbfhibefp/def/Session Storage/: LOG
.edge-dom-profile/Default/Storage/ext/ihmafllikibpmigkcoadcmckbfhibefp/def/Shared Dictionary/cache/index-dir/: the-real-index
.edge-dom-profile/Default/Sync Data/LevelDB/: LOG
.edge-dom-profile/Default/Sync Data/mip/logs/: mip_sdk.miplog
.edge-dom-profile/Default/shared_proto_db/: LOG
.edge-dom-profile/Default/shared_proto_db/metadata/: LOG
.edge-dom-profile/GrShaderCache/: index
.edge-dom-profile/GraphiteDawnCache/: index
.edge-dom-profile/ShaderCache/: index
.github/workflows/: python-ci.yml
.tmp_sumo_validate/: chatt.net.xml  roundtrip.xodr
datasets/: chatt.net.xml  chatt.xodr  edited_network.xodr
datasets/xdor_sumo/: chatt.net.xml  chatt.xodr  chatt_1.xodr
docs/: README_license_section.md
pyopendrive/: __init__.py  __xdor_reader.py  __xodr_reader.py  __xodr_sumo.py
pyopendrive/web/: README.md  __init__.py  __main__.py  _editor.py  index.css  index.html  index.js  viewer.data
pyopendrive/web/fonts/: odr-3d-objects.js
tests/: test_pyopendrive.py
