[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyopendrive"
version = "0.4.5"
description = "Python tools from libOpenDrive for reading, inspecting, converting, and extending OpenDRIVE road networks with additional utility tools."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Xiangyong Luo", email = "luoxiangyong01@gmail.com" },
]
keywords = [
    "opendrive",
    "xodr",
    "sumo",
    "road-network",
    "traffic-simulation",
    "viewer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "loguru",
    "sumolib",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyopendrive*"]

[tool.setuptools.package-data]
pyopendrive = [
    "web/index.html",
    "web/README.md",
    "web/viewer.js",
    "web/viewer.wasm",
    "web/viewer.data",
    "web/viewer.local-assets.js",
    "web/favicon.ico",
    "web/fonts/*",
]
"pyopendrive.web" = [
    "index.html",
    "README.md",
    "viewer.js",
    "viewer.wasm",
    "viewer.data",
    "viewer.local-assets.js",
    "favicon.ico",
    "fonts/*",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
# uv publish --index testpypi